--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/EmptyDataView.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/EmptyDataView.xib
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="EmptyDataView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="EmptyDataView" customModule="LifeTech_lifedrive" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="283" height="220"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k9C-uC-RPN">
-                    <rect key="frame" x="93.5" y="0.0" width="96" height="96.5"/>
+                    <rect key="frame" x="93.5" y="0.0" width="96" height="96"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="96" id="ZMx-Yw-9uC"/>
                         <constraint firstAttribute="height" constant="96" id="mx5-Mg-t2T"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyd-0Z-8Lz" userLabel="message label">
-                    <rect key="frame" x="0.0" y="112.5" width="283" height="57.5"/>
+                    <rect key="frame" x="0.0" y="112" width="283" height="58"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s1K-vc-udV" customClass="BlueButtonWithNoFilesWhiteText" customModule="lifebox" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s1K-vc-udV" customClass="BlueButtonWithNoFilesWhiteText" customModule="LifeTech_lifedrive" customModuleProvider="target">
                     <rect key="frame" x="46.5" y="181" width="190" height="39"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="190" id="LEc-gf-11N">
@@ -38,12 +36,13 @@
                         <constraint firstAttribute="height" constant="39" id="yW1-y6-iLT"/>
                     </constraints>
                     <inset key="contentEdgeInsets" minX="4" minY="0.0" maxX="4" maxY="0.0"/>
-                    <state key="normal" title="button"/>
+                    <connections>
+                        <action selector="onActionButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="oWi-TC-mx7"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="top" secondItem="k9C-uC-RPN" secondAttribute="bottom" constant="-96" id="5RD-ez-z3q"/>
                 <constraint firstAttribute="trailing" secondItem="iyd-0Z-8Lz" secondAttribute="trailing" id="7dW-uv-eTO"/>
                 <constraint firstItem="s1K-vc-udV" firstAttribute="top" secondItem="iyd-0Z-8Lz" secondAttribute="bottom" constant="11" id="8h4-UQ-csN"/>
                 <constraint firstItem="k9C-uC-RPN" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="C4y-3s-OXu"/>
