--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoViewController.xib
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FileInfoViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FileInfoViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
             <connections>
                 <outlet property="durationH" destination="OP5-ta-oD6" id="ppW-QC-IV5"/>
                 <outlet property="durationLabel" destination="Sws-0u-8c8" id="Wwj-ai-7tj"/>
                 <outlet property="durationTitle" destination="5Au-NX-n16" id="XLP-4s-tW7"/>
+                <outlet property="editButton" destination="4ku-t7-84I" id="rMu-GE-0pN"/>
                 <outlet property="fileInfoTitle" destination="zZh-Wh-hzn" id="YfP-5l-nWY"/>
                 <outlet property="fileName" destination="77o-rW-aKy" id="h17-0g-eIn"/>
                 <outlet property="fileNameTitle" destination="kIx-nZ-QgV" id="RN1-ZT-RAu"/>
@@ -30,11 +29,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="abs-2N-74x">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                     <connections>
                         <action selector="onHideKeyboard" destination="-1" eventType="touchUpInside" id="Cyy-Lu-yJi"/>
                     </connections>
@@ -49,17 +48,27 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="77o-rW-aKy">
-                    <rect key="frame" x="22" y="47" width="331" height="22"/>
+                    <rect key="frame" x="22" y="47" width="286" height="22"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="6ex-g9-480"/>
                     </constraints>
-                    <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="RRv-bH-iEw"/>
                     </connections>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ku-t7-84I">
+                    <rect key="frame" x="330" y="41" width="29" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="29" id="2I9-Ah-NS7"/>
+                    </constraints>
+                    <inset key="contentEdgeInsets" minX="6" minY="6" maxX="6" maxY="6"/>
+                    <state key="normal" image="shape"/>
+                    <connections>
+                        <action selector="onEditButtonTapped:" destination="-1" eventType="touchUpInside" id="V0C-ot-vuG"/>
+                    </connections>
+                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hem-zh-lNu">
                     <rect key="frame" x="7" y="81" width="361" height="1"/>
                     <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
@@ -169,9 +178,9 @@
                 <constraint firstItem="VnX-Ji-QDm" firstAttribute="top" secondItem="m5X-lA-kgv" secondAttribute="bottom" id="5Aq-lS-mXo"/>
                 <constraint firstItem="5Au-NX-n16" firstAttribute="top" secondItem="qsp-jh-5I9" secondAttribute="bottom" id="5Vs-O0-LPU"/>
                 <constraint firstItem="kIx-nZ-QgV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="AMe-Gn-NR1"/>
-                <constraint firstAttribute="trailing" secondItem="77o-rW-aKy" secondAttribute="trailing" constant="22" id="DNc-ym-kJD"/>
                 <constraint firstItem="4aH-FR-8Sf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="ETa-OS-zmd"/>
                 <constraint firstItem="77o-rW-aKy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="FfF-7U-I7T"/>
+                <constraint firstItem="4ku-t7-84I" firstAttribute="leading" secondItem="77o-rW-aKy" secondAttribute="trailing" constant="22" id="FwO-G1-fPQ"/>
                 <constraint firstItem="kIx-nZ-QgV" firstAttribute="top" secondItem="miw-2C-Mdw" secondAttribute="top" constant="15" id="GhO-W6-vD1"/>
                 <constraint firstAttribute="trailing" secondItem="kIx-nZ-QgV" secondAttribute="trailing" constant="22" id="H4y-m1-onP"/>
                 <constraint firstAttribute="trailing" secondItem="Of7-IW-hVl" secondAttribute="trailing" constant="7" id="HUL-1e-2Pi"/>
@@ -182,10 +191,12 @@
                 <constraint firstAttribute="trailing" secondItem="4aH-FR-8Sf" secondAttribute="trailing" constant="22" id="NRF-jS-Xkd"/>
                 <constraint firstItem="77o-rW-aKy" firstAttribute="top" secondItem="kIx-nZ-QgV" secondAttribute="bottom" constant="16" id="NYq-2Y-zwO"/>
                 <constraint firstItem="Sws-0u-8c8" firstAttribute="top" secondItem="6gm-iK-w9c" secondAttribute="bottom" id="OIE-vR-Hhh"/>
+                <constraint firstItem="miw-2C-Mdw" firstAttribute="trailing" secondItem="4ku-t7-84I" secondAttribute="trailing" constant="16" id="PR0-2t-2tY"/>
                 <constraint firstItem="Of7-IW-hVl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="7" id="Qat-0l-qsy"/>
                 <constraint firstAttribute="trailing" secondItem="6gm-iK-w9c" secondAttribute="trailing" constant="22" id="SZ5-he-J40"/>
                 <constraint firstAttribute="trailing" secondItem="abs-2N-74x" secondAttribute="trailing" id="SiO-0z-nRm"/>
                 <constraint firstAttribute="trailing" secondItem="Sws-0u-8c8" secondAttribute="trailing" constant="22" id="Tud-7o-ST6"/>
+                <constraint firstItem="4ku-t7-84I" firstAttribute="centerY" secondItem="77o-rW-aKy" secondAttribute="centerY" id="WJx-ba-5Dr"/>
                 <constraint firstItem="hem-zh-lNu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="7" id="X26-5G-Jf9"/>
                 <constraint firstItem="m5X-lA-kgv" firstAttribute="top" secondItem="boz-R0-aEv" secondAttribute="top" id="XTV-KY-VPu"/>
                 <constraint firstItem="4aH-FR-8Sf" firstAttribute="top" secondItem="Sws-0u-8c8" secondAttribute="bottom" id="YTF-o1-RrV"/>
@@ -214,4 +225,7 @@
             <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="shape" width="17" height="17"/>
+    </resources>
 </document>
