--- a/Depo/Depo/Presentation/UserStories/Start/TermsAndServices/View/TermsAndServicesScreen.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/TermsAndServices/View/TermsAndServicesScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -21,7 +21,6 @@
                 <outlet property="scrollView" destination="wx0-Ty-pdf" id="2cr-dt-zJE"/>
                 <outlet property="topContraintIOS10" destination="Emx-2B-mwG" id="iRg-dw-zzO"/>
                 <outlet property="view" destination="iN0-l3-epB" id="dBd-vg-Lh5"/>
-                <outlet property="welcomeLabel" destination="9Kb-k9-w6Q" id="qY3-YU-L4x"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -39,7 +38,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="777"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NGr-cm-icG">
-                                    <rect key="frame" x="22" y="56" width="331" height="300"/>
+                                    <rect key="frame" x="22" y="16" width="331" height="300"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WTC-UM-kQA">
                                             <rect key="frame" x="0.0" y="0.0" width="331" height="145"/>
@@ -61,21 +60,12 @@
                                         <constraint firstAttribute="height" constant="300" id="Tck-f1-N5h"/>
                                     </constraints>
                                 </stackView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Lifebox!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kb-k9-w6Q">
-                                    <rect key="frame" x="109.5" y="21" width="156" height="25"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="25" id="ha8-3y-Mut"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="326" placeholderIntrinsicHeight="149" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aEZ-sm-9UL">
-                                    <rect key="frame" x="24" y="367" width="327" height="149"/>
+                                    <rect key="frame" x="24" y="327" width="327" height="149"/>
                                     <viewLayoutGuide key="safeArea" id="48Z-Jc-yGI"/>
                                 </stackView>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="t0s-px-gfW">
-                                    <rect key="frame" x="20" y="526" width="335" height="30"/>
+                                    <rect key="frame" x="20" y="486" width="335" height="30"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Lorem ipsum dolor sit er elit  Lorem ipsum dolor sit er elit Lorem ipsum dolor sit er elit " textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Khr-2R-F8m" customClass="IntrinsicTextView" customModule="LifeTech_lifedrive" customModuleProvider="target">
                                             <rect key="frame" x="10" y="10" width="315" height="10"/>
@@ -102,16 +92,14 @@
                                 <constraint firstAttribute="trailing" secondItem="NGr-cm-icG" secondAttribute="trailing" constant="22" id="Jht-g7-a0V"/>
                                 <constraint firstItem="t0s-px-gfW" firstAttribute="top" secondItem="aEZ-sm-9UL" secondAttribute="bottom" constant="10" id="U8v-U4-FeN"/>
                                 <constraint firstItem="aEZ-sm-9UL" firstAttribute="leading" secondItem="NGr-cm-icG" secondAttribute="leading" constant="2" id="XZ2-JO-JHt"/>
-                                <constraint firstItem="9Kb-k9-w6Q" firstAttribute="top" secondItem="heF-JQ-sC2" secondAttribute="top" constant="21" id="Xpf-ka-piJ">
-                                    <variation key="widthClass=regular" constant="50"/>
+                                <constraint firstItem="NGr-cm-icG" firstAttribute="top" secondItem="heF-JQ-sC2" secondAttribute="top" constant="16" id="caC-gw-75I">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="32"/>
                                 </constraint>
                                 <constraint firstItem="aEZ-sm-9UL" firstAttribute="leading" secondItem="heF-JQ-sC2" secondAttribute="leading" constant="24" id="ezp-9Q-LyK"/>
-                                <constraint firstItem="9Kb-k9-w6Q" firstAttribute="centerX" secondItem="heF-JQ-sC2" secondAttribute="centerX" id="hGm-ro-4kj"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="t0s-px-gfW" secondAttribute="bottom" constant="80" id="jAv-Uk-2ZF"/>
                                 <constraint firstItem="t0s-px-gfW" firstAttribute="leading" secondItem="heF-JQ-sC2" secondAttribute="leading" constant="20" symbolic="YES" id="joD-2r-tt3"/>
                                 <constraint firstItem="aEZ-sm-9UL" firstAttribute="trailing" secondItem="NGr-cm-icG" secondAttribute="trailing" constant="-2" id="qCU-BJ-xNW"/>
                                 <constraint firstAttribute="trailing" secondItem="t0s-px-gfW" secondAttribute="trailing" constant="20" symbolic="YES" id="r0V-Le-MEF"/>
-                                <constraint firstItem="NGr-cm-icG" firstAttribute="top" secondItem="9Kb-k9-w6Q" secondAttribute="bottom" constant="10" id="sH0-9U-jVi"/>
                                 <constraint firstItem="aEZ-sm-9UL" firstAttribute="centerX" secondItem="t0s-px-gfW" secondAttribute="centerX" id="w7F-pp-09s"/>
                             </constraints>
                         </view>
