--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoCell.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoCell.xib
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoVideoCell" customModule="lifebox" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoVideoCell" customModule="LifeTech_lifedrive" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -31,7 +29,7 @@
                                 <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AwM-ng-18C">
                                     <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="0o2-0Y-10v">
+                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="0o2-0Y-10v">
                                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </view>
@@ -43,14 +41,10 @@
                         </view>
                         <blurEffect style="light"/>
                     </visualEffectView>
-                    <visualEffectView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LrF-OZ-70O">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9W-7J-Q9j">
                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
-                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gXr-ST-V2P">
-                            <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        </view>
-                        <blurEffect style="light"/>
-                    </visualEffectView>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5aj-uE-NFD">
                         <rect key="frame" x="160" y="4" width="22" height="22"/>
                         <constraints>
@@ -58,8 +52,14 @@
                             <constraint firstAttribute="height" constant="22" id="GDg-TA-bIU"/>
                         </constraints>
                     </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VhT-ZS-0Ab">
+                        <rect key="frame" x="0.0" y="145" width="186" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="9Y9-DM-xAV"/>
+                        </constraints>
+                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D6a-f1-mPS">
-                        <rect key="frame" x="168" y="142" width="14" height="14"/>
+                        <rect key="frame" x="168" y="149" width="14" height="14"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="14" id="P7m-RR-XbT"/>
                             <constraint firstAttribute="height" constant="14" id="ef2-ST-o1D"/>
@@ -88,12 +88,6 @@
                             <constraint firstAttribute="width" constant="10" id="bc1-yD-uZd"/>
                         </constraints>
                     </imageView>
-                    <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3QP-J6-7Bi">
-                        <rect key="frame" x="2" y="160" width="182" height="2"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="2" id="DiB-MH-3al"/>
-                        </constraints>
-                    </progressView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rtp-Ce-5Aw">
                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -104,44 +98,43 @@
                 <constraint firstItem="TmD-it-Oee" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="0yg-35-CVW"/>
                 <constraint firstAttribute="trailing" secondItem="Rtp-Ce-5Aw" secondAttribute="trailing" id="2Zi-jd-uEz"/>
                 <constraint firstItem="5aj-uE-NFD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="2dm-zn-67t"/>
-                <constraint firstItem="LrF-OZ-70O" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="2pF-C4-qp6"/>
-                <constraint firstItem="3QP-J6-7Bi" firstAttribute="top" secondItem="D6a-f1-mPS" secondAttribute="bottom" constant="4" id="AIt-9e-6TR"/>
+                <constraint firstAttribute="bottom" secondItem="b9W-7J-Q9j" secondAttribute="bottom" id="3b5-a0-rqK"/>
                 <constraint firstAttribute="bottom" secondItem="ha8-dW-lGP" secondAttribute="bottom" id="C3H-YY-Gqm"/>
                 <constraint firstItem="ha8-dW-lGP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="EEt-cZ-Shh"/>
                 <constraint firstItem="2HJ-NZ-h8K" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="FSP-Og-aDz"/>
-                <constraint firstItem="3QP-J6-7Bi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="2" id="ISV-oz-f8E"/>
-                <constraint firstItem="LrF-OZ-70O" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="JFJ-s6-19G"/>
+                <constraint firstItem="VhT-ZS-0Ab" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="He5-ea-rgQ"/>
+                <constraint firstItem="b9W-7J-Q9j" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="KmJ-VK-fsI"/>
+                <constraint firstItem="b9W-7J-Q9j" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Lbv-dD-HE1"/>
                 <constraint firstItem="Vz7-W6-1DU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="OZ3-gm-3oy"/>
                 <constraint firstAttribute="trailing" secondItem="TmD-it-Oee" secondAttribute="trailing" id="Pni-5e-TzX"/>
+                <constraint firstAttribute="leading" secondItem="VhT-ZS-0Ab" secondAttribute="leading" id="SiP-hI-JOe"/>
                 <constraint firstItem="Shs-Gd-W9e" firstAttribute="leading" secondItem="Vz7-W6-1DU" secondAttribute="trailing" constant="3" id="WOY-8m-Sxs"/>
                 <constraint firstItem="ha8-dW-lGP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Wjh-Ca-gb9"/>
+                <constraint firstAttribute="bottom" secondItem="Vz7-W6-1DU" secondAttribute="bottom" constant="9" id="YeE-k6-ewQ"/>
                 <constraint firstAttribute="bottom" secondItem="Rtp-Ce-5Aw" secondAttribute="bottom" id="Z56-7g-0sw"/>
+                <constraint firstAttribute="leading" secondItem="b9W-7J-Q9j" secondAttribute="leading" id="aMh-VE-jPL"/>
                 <constraint firstItem="Rtp-Ce-5Aw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="aX9-hc-XVH"/>
+                <constraint firstAttribute="bottom" secondItem="VhT-ZS-0Ab" secondAttribute="bottom" id="bYe-9E-XUH"/>
                 <constraint firstAttribute="trailing" secondItem="ha8-dW-lGP" secondAttribute="trailing" id="ckG-Z0-t0q"/>
                 <constraint firstItem="2HJ-NZ-h8K" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="dQr-O3-JyM"/>
                 <constraint firstAttribute="bottom" secondItem="TmD-it-Oee" secondAttribute="bottom" id="eUQ-SA-MOR"/>
-                <constraint firstItem="3QP-J6-7Bi" firstAttribute="top" secondItem="D6a-f1-mPS" secondAttribute="bottom" constant="4" id="jtJ-qK-zSE"/>
-                <constraint firstAttribute="bottom" secondItem="3QP-J6-7Bi" secondAttribute="bottom" constant="3" id="mLe-5J-glr"/>
-                <constraint firstAttribute="trailing" secondItem="3QP-J6-7Bi" secondAttribute="trailing" constant="2" id="pbf-VH-c45"/>
+                <constraint firstItem="VhT-ZS-0Ab" firstAttribute="bottom" secondItem="D6a-f1-mPS" secondAttribute="bottom" constant="2" id="jtJ-qK-zSE"/>
                 <constraint firstAttribute="trailing" secondItem="Shs-Gd-W9e" secondAttribute="trailing" constant="4" id="phH-cH-E4t"/>
                 <constraint firstAttribute="trailing" secondItem="D6a-f1-mPS" secondAttribute="trailing" constant="4" id="sAk-zk-Usj"/>
                 <constraint firstItem="Rtp-Ce-5Aw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="u4p-Bn-JXS"/>
-                <constraint firstItem="3QP-J6-7Bi" firstAttribute="top" secondItem="Vz7-W6-1DU" secondAttribute="bottom" constant="4" id="uft-fs-3Zv"/>
-                <constraint firstAttribute="bottom" secondItem="LrF-OZ-70O" secondAttribute="bottom" id="vVR-qQ-508"/>
                 <constraint firstAttribute="trailing" secondItem="5aj-uE-NFD" secondAttribute="trailing" constant="4" id="wdI-YV-Gup"/>
                 <constraint firstAttribute="bottom" secondItem="Shs-Gd-W9e" secondAttribute="bottom" constant="2" id="wre-hI-VEJ"/>
                 <constraint firstItem="TmD-it-Oee" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="z4c-3Q-Cb5"/>
-                <constraint firstAttribute="trailing" secondItem="LrF-OZ-70O" secondAttribute="trailing" id="zuP-X3-Oeo"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="186" height="165"/>
             <connections>
+                <outlet property="bleachView" destination="b9W-7J-Q9j" id="BUG-BQ-Sh6"/>
                 <outlet property="checkmarkImageView" destination="5aj-uE-NFD" id="CSl-mz-aLF"/>
-                <outlet property="cloudStatusImageView" destination="D6a-f1-mPS" id="vnb-sw-Z4p"/>
                 <outlet property="favoriteImageView" destination="2HJ-NZ-h8K" id="tjT-zV-keu"/>
-                <outlet property="opacityBlurVisualEffectView" destination="LrF-OZ-70O" id="Ida-GF-ibF"/>
-                <outlet property="progressView" destination="3QP-J6-7Bi" id="L5d-Bw-CY5"/>
+                <outlet property="gradientImageView" destination="VhT-ZS-0Ab" id="wvP-Yt-k2Z"/>
                 <outlet property="selectionStateView" destination="Rtp-Ce-5Aw" id="kXL-56-QJN"/>
+                <outlet property="syncStatusImageView" destination="D6a-f1-mPS" id="vnb-sw-Z4p"/>
                 <outlet property="thumbnailBlurVisualEffectView" destination="TmD-it-Oee" id="ruQ-8G-FCL"/>
                 <outlet property="thumbnailImageView" destination="ha8-dW-lGP" id="Wvo-Ho-LOQ"/>
                 <outlet property="videoDurationLabel" destination="Shs-Gd-W9e" id="C4p-Jd-y5B"/>
